Fix contrast on projects

--- a/index.css
+++ b/index.css
@@ -235,14 +235,14 @@ footer > div > ul {
   font-weight: bold;
   width: 100%;
   cursor: pointer;
-  max-width: 327px;
+  /* max-width: 327px; */
 }
 
 .works_head > div > div > button {
   width: 124px;
   height: 48px;
   top: 259px;
-  background: #ff6b00;
+  background: hsl(22, 100%, 33%);
   align-items: center;
   text-align: center;
   letter-spacing: 0.03em;
@@ -252,6 +252,7 @@ footer > div > ul {
   line-height: 24px;
   border: none;
   cursor: pointer;
+  font-weight: 700;
 }
 
 .works_det > div > ul > li {
@@ -288,12 +289,12 @@ footer > div > ul {
 }
 
 .works_det {
-  margin-top: -30px;
+  margin-top: 30px;
   display: inline-grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto auto auto auto auto auto;
-  padding: 10px;
-  margin-left: 50px;
+  gap: 24px;
+  /* margin-left: 50px; */
   align-content: center;
   justify-content: center;
 }
@@ -301,12 +302,23 @@ footer > div > ul {
 .works_det > div {
   display: flex;
   flex-direction: column;
-  background-image: url("img/works_card.png");
-  background-repeat: no-repeat;
-  margin: auto;
-  width: 90%;
-  margin-top: 30px;
-  max-width: 372px;
+  /* margin: auto; */
+  /* width: 90%; */
+  margin-bottom: 24px;
+  /* max-width: 372px; */
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.75);
+  overflow: hidden;
+}
+
+.works_det > div > img,
+.works_det > div > picture,
+.works_det > div > picture > img {
+  position: absolute;
+  display: block;
+  z-index: -1;
+  width: 100%;
+  height: auto;
 }
 
 .works_det > div > h3 {
@@ -317,6 +329,7 @@ footer > div > ul {
   color: #fff;
   margin-top: 90px;
   margin-left: 20px;
+  padding-bottom: 24px;
 }
 
 .about {
@@ -565,22 +578,12 @@ footer div > form > textarea {
   .works_det {
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto;
-    margin-left: 50px;
+    margin-inline: 150px;
     align-content: center;
   }
 
   .about_head > button {
     margin-left: 30px;
-  }
-
-  .works_det > div > button {
-    max-width: 327px;
-  }
-
-  .works_det > .det1 {
-    margin-top: 10px;
-    background-image: url("img/det1.png");
-    background-size: 327px 400px;
   }
 
   .works_det > .det1 > h3 {
@@ -597,7 +600,6 @@ footer div > form > textarea {
 
   .works_det > .det2 {
     background-size: 327px 400px;
-    background-image: url("img/det2.png");
   }
 
   .works_det > .det2 > h3 {
@@ -609,7 +611,6 @@ footer div > form > textarea {
   }
 
   .works_det > .det3 {
-    background-image: url("img/det3.png");
     background-size: 327px 400px;
   }
 
